Make sure open modal is 100% width and highest z-index

--- a/wp-content/themes/currentorg/less/current-ltw-projects.less
+++ b/wp-content/themes/currentorg/less/current-ltw-projects.less
@@ -191,7 +191,9 @@
 		position: absolute;
 		background: @white;
 		height: 100%;
-		width: 94%;
+		width: 100%;
+		max-width: 100%;
+		z-index: 99;
 	}
 	.projects-single-interior-container {
 		position: sticky;
